css/styles.css
:root {

    /* Colours */
    --primary-color: #FDFDFA;
    --secondary-color: #b983ff;
    --accent-light-blue: #94daff;
    --accent-dark-blue: #94b3fd;
    --accent-turquoise: #99feff;
    --accent-orange: #ffbd68;

    /* Sizes */
    --ellipse1-size: 25vh;
    --ellipse2-size: 30vh;
    --ellipse3-size: 40vh;
}

body {
    background-color: var(--primary-color);
    font-family: 'Spartan', sans-serif;
}

h1 {
    font-family: 'Spartan', sans-serif;
    font-size: calc(2.5vw + 2.5vh + 2vmin);
    font-weight: 800;
}

h2 {
    font-family: 'Spartan', sans-serif;
    font-size: calc(1.5vw + 1.5vh + 2vmin);
    font-weight: 600;
}
h3 {
    font-size: large;
}

p {
    text-align: left;
}
.heading-container {
    height: 10vh;
    width: 30vw;
}

.backgroundContainer {
    position: fixed;
    width: 100vw;
    height: 100vh;
    z-index: -1;   /*This is important so that the background is behind everything, else links won't work*/   
}


.main-wrapper {
    margin: 0;
    text-align: center;
   
}

/* Buttons */
.accentButton {
    color: white;
    font-weight: 600;
}

/* Ellipses */

.ellipse1 {
   
    position: absolute;
    width: var(--ellipse1-size);
    height: var(--ellipse1-size);
    left: 53vw;
    top: 20vh;
    border-radius: 100%;
    background: radial-gradient(53.74% 53.74% at 80.99% 38.5%, rgba(148, 179, 253, 0.16) 0%, #94B3FD 100%);
}


.ellipse2 {
    
    position: absolute;
    width: var(--ellipse2-size);
    height: var(--ellipse2-size);
    left: 15vw;
    top: 60vh;
    border-radius: 100%;
    background: radial-gradient(53.89% 53.89% at 81.14% 33.39%, rgba(148, 218, 255, 0.2) 0%, #99FEFF 100%);
}

.ellipse3 {
   
    position: absolute;
    width: var(--ellipse3-size);
    height: var(--ellipse3-size);
    left: 72vw;
    top: 30vh;
    border-radius: 100%;
    background: radial-gradient(44.01% 44.01% at 71.25% 27.66%, rgba(148, 179, 253, 0.16) 0%, #B983FF 100%);
}

/* Navigation Section */

.navBar {
    display: inline-block;
    margin-left: 0;
    height: 10%;
    width: 100%;
    align-items: center;
    box-shadow: 0px 3px 12px -1px rgba(161, 145, 145, 0.75);
    -webkit-box-shadow: 0px 3px 12px -1px rgba(161, 145, 145, 0.75);
    -moz-box-shadow: 0px 3px 12px -1px rgba(161, 145, 145, 0.75);
}

.navLogo {
    font-size: 3rem;
}

.navLinks {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px 7px;
}

.links {
    padding: 5px 10%;
    color: black;
    text-decoration: none;

}

/* Greeting Section*/

.default-wrapper {
    display: flex;
    justify-content: center;
   
    margin: 5% 0;

}

.greeting-card {
    display: flex;
    flex-direction: row;
}

.transparent-card {
    align-items: center;
    position: relative;
    min-width: 70vw;
    height: 65vh;
    padding: 1% 5%;
    justify-content: space-evenly;
    background: linear-gradient(231.55deg, rgba(255, 255, 255, 0.83) 22.77%, rgba(255, 255, 255, 0.53) 76.52%);
    border: 1px solid rgba(0, 0, 0, 0.06);
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.06);
    backdrop-filter: blur(20px);
    /* Note: backdrop-filter has minimal browser support */
    border-radius: 25px;

}

.greeting-text-wrapper {
    text-align: left;
}

.main-image-wrapper {
    display: grid;
    place-items: center;
    grid-template-areas: "inner-div";
}

.blob-3 {
    grid-area: inner-div;
    left: 0;
    top: 0;
    width: 50vh;
    height: 50vh;
}
.blob-4 {
    grid-area: inner-div;
    left: 0;
    top: 0;
    width: 50vh;
    height: 50vh;
}

.profile-img {
    grid-area: inner-div;
    height: 50vh;
}

/* About Section */
.about-card {
    width: 75vw;
}
.about-top {
    display: flex;
    justify-content: space-evenly;
}

.about-text-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 50%;
    margin: 0 2%;
  
}

.about-text {
    margin-bottom: 10%;
}

/* Knowledge & Skills Section */
.skills-cards-wrapper {
    min-width: 60%;
    height: auto;
    display: flex;
    /* grid-area: inner-div; */
    margin-top: 15%;
}
.skills {
    display: flex;
    flex-direction: column;
    width: 75vw;
    height: 100%;
    padding: 5% 7%;
}

.skills-text-wrapper {
    align-items: flex-start;
    height: auto;
    width: 30%;
    /* grid-area: inner-div; */
}

.skills-card {
    position: static;
    height: 100%;
    width: 25%;
    margin: auto;
    background: linear-gradient(231.55deg, rgba(255, 255, 255, 0.87) 22.77%, rgba(255, 255, 255, 0.37) 82.09%);
    backdrop-filter: blur(20px);
    /* Note: backdrop-filter has minimal browser support */
    padding: 2% 2%;
    border-radius: 40px;
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.06);
    /* background-color: var(--secondary-color); */
}
.skills-list-container {
    display: flex;
    justify-content: center;
}
.skills-list {
    text-align: left;
    font-size: small;
}
.skills-img {
    max-width: 50%;
}
.card-1 {
    top: 2%;
    left: 2%;
}
.card-2 {
    top: 20%;
    left: 26%;
}
.card-3 {
    top: 40%;
    left: 49%;
}
.skills-heading {
    grid-area: inner-div;
}

/* Contact Section */

.contact-card {
    display: flex;
    flex-direction: row;
    width: 75vw;
    height: auto;
    padding: 5% 7%;
}
.contact-leftside {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: left;
    height: 100%;
    width: 50%;
}
.contact-icons-wrapper {
    display: flex;
    justify-content: space-evenly;
    font-size: 2rem;
}

/* Media Queries */
@media screen and (max-width:900px) {
    /* About Section */
    .about-top {
        flex-direction: column;
    }
    .about-text-wrapper {
        max-width: 100%;
    }
    .heading-container {
        width: 100%;
    }
    .about-card {
        height: auto;
        padding: 5% 2%;
    }

    /* Skills Section */
    .skills-cards-wrapper {
        flex-direction: column;
        width: 5rem;
    }
    .skills-text-wrapper {
        align-items: flex-start;
        width: auto;

    }
    .blob-4 {
        width: 20vw;
        height: 20vw;
    }
    .skills-card {
        width: auto;
        margin: 5% 2%;
        padding: 5% 2%;
    }
    .blob-3 {
        width: 30vh;
    }
    .profile-img {
        width: 30vh;
        height: 30vh;
    }
}

